# nodc-statistics

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: format_lint_and_test.yml
src/nodc_statistics/: calculate_parameter.py  regions.py  statistic.py  statistics.py
src/nodc_statistics/data/: baltic_sea.csv  kattegat.csv  pos_area_tag_1991-2020.txt  pos_area_tag_1991_2020.csv  pos_area_tag_SVAR2022_HELCOM_OSPAR_vs2.csv  settings.json  skagerrak.csv
src/nodc_statistics/data/statistics/: 10.csv  11.csv  12n.csv  12s.csv  13.csv  14.csv  15.csv  16.csv  17.csv  18.csv  19.csv  1n.csv  1s.csv  2.csv  20.csv  21.csv  22.csv  23.csv  24.csv  25.csv  3.csv  4.csv  5.csv  6.csv  7.csv  8.csv  9.csv  Arkona Basin.csv  Bay of Mecklenburg.csv  Bornholm Basin.csv  Bothnian Bay.csv  Bothnian Sea Finnish Coastal waters.csv  Bothnian Sea.csv  Eastern Gotland Basin.csv  Gdansk Basin Polish Coastal waters.csv  Gdansk Basin.csv  Great Belt.csv  Gulf of Finland.csv  Gulf of Riga Estonian Coastal waters.csv  Gulf of Riga.csv  (+12 more)
tests/: test_seabasin.py  test_statistics.py
