[project]
name = "nodc-statistics"
version = "2025.1.0"
description = "Statistics for NODC"
authors = [
    {name = "Jonatan Skogsfors", email = "jonatan.skogsfors@smhi.se"},
    {name = "Lena Viktorsson", email = "lena.viktorsson@smhi.se"}
]
dependencies = [
    "geopandas>=1.0.1",
    "shapely>=2.0.6",
    "nodc-calculations @ git+https://github.com/nodc-sweden/nodc-calculations@v2025.1.0",
    "matplotlib>=3.9.4",
]
requires-python = ">=3.9"
readme = "README.md"
license = {file = "LICENSE"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references=  true


[dependency-groups]
dev = [
    "pytest>=8.1.1",
    "ruff>=0.6.9",
    "pre-commit>=3.7.0",
]

[tool.ruff]
line-length = 90
indent-width = 4
target-version = "py39"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = [
    "A",  # flake8-builtins
    "F",  # pyflakes
    "E", # pycodestyle: error
    "W",  # pycodestyle: warning
    "I001",  # isort: unsorted-imports
    "RUF"  # Ruff-specific rules
]
